syntax = "proto3";

option go_package = "../article";

service ArticleService {
    rpc Create(CreateReq) returns (CreateResp);
    rpc Detail(DetailReq) returns (DetailResp);
}

message CreateReq {
    string Title = 1;
    string Content = 2;
    int64 CateId = 3;
}

message CreateResp {
    int64 Id = 1;
}

message DetailReq {
    int64 Id = 1;
}

message DetailResp {
    int64 Id = 1;
    string Title = 2;
    string Content = 3;
    int64 CateId = 4;
    int64 UserId = 5;
}